--- a/Kontaktspeicher/Kontaktspeicher.csproj
+++ b/Kontaktspeicher/Kontaktspeicher.csproj
@@ -64,6 +64,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Contact.cs" />
+    <Compile Include="ContactControl.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
